# telegram_gpt_assistant

./: .env.example  Dockerfile  README.md  Taskfile.yaml  pyproject.toml
telegram_gpt_assistant/: __init__.py  __main__.py  _app.py  _cli.py  _settings.py
tests/: test_settings.py
